assets/dananke/scss/base.scss
/* ... */
pre code {
  display: block;
  white-space: pre-wrap;
  line-height: 2;
}

pre {
  background-color: var(--pre-code-bg-colour, #000);
  color: var(--pre-code-colour, #f8f8f2);

  hyphens: none;
  position: relative;
}

p code {
  background-color: var(--p-code-bg-colour, #000);
  color: var(--p-code-colour, #f8f8f2);
  padding-bottom: 2px;
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
}

.main-block li pre {
    min-width: auto;
}

/* We want titles to be title size but slightly smaller, so 'em' *not* 'rem' */
code {
    font-size: .875em;
}

blockquote {
    border-left: solid 4px;
    padding-bottom: .5rem;
    padding-left: 1rem;
    padding-right: 1em;
    padding-top: .5rem;

    & p {
        margin-bottom: 0;
    }
}

figure figcaption {
    margin-bottom: 1.5rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;

    & h2, span {
        font-style: italic;
    }

    & h2 {
        font-size: 1.25rem;
    }
}

.main-block .highlight {
    min-width: min-content;
}

.main-block pre {
    background-color: var(--pre-code-bg-colour, #000);
    color: var(--pre-code-colour, #f8f8f2);
    min-width: min-content;
    padding: .4rem;
    white-space: pre-wrap;
}

.main-block .highlight > pre {
    min-width: min-content;
    white-space: pre-wrap;
}

.main-block pre > code {
    min-width: min-content;
}

.main-block .highlight > pre > code {
    margin: 0;
    min-width: min-content;
    padding: 0;
}

.main-block {
    display: block;
    padding-bottom: 0;
}

.nav-buttons-bar {
    font-size: 1.25rem;
    overflow: visible;
    padding-left: 1rem;
    padding-right: 1rem;
    width: 100%;
}

.main-navigation {
    background-color: var(--main-nav-bg-colour, #111);
}

.main-navigation {
    display: flex;
    flex: 1 1 100%;
    flex-direction: column;
    justify-content: space-between;
    padding: 0;
    width: 100%;

    @include center-block;
}

.main-article .list-buttons-bar {
    flex: 1 1 100%;
}

.nav-buttons-bar .list-buttons-bar {
    align-items: center;
    align-content: center;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    list-style: none;
    margin-left: 0;
    margin-right: 0;
    padding: 0;

    @include center-block;
}

.main-nav-details > summary {
    background-color: var(--main-nav-bg-colour, #111);
    list-style-image: var(--hamburger-icon);
    height: 28px;
    left: 0;
    top: 0;
    padding: 10px; // So size is 48px == minimum tap point size
    position: relative;
    z-index: 3;
}

.main-nav-details .main-navigation-mobile {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    position: absolute;
    top: 48px;
    visibility: visible;
    z-index: -1;

    @include center-block;
}

.main-nav-details .main-navigation-mobile,
.site-footer {
    background-color: var(--main-nav-bg-colour, #111);
    width: 100%;
}

.main-nav-details[open] .main-navigation-mobile {
    z-index: 2;
}

.main-nav-details + .main-navigation {
    display: none;
    visibility: hidden;
    z-index: -1;
}

.nav-menu-item {
    color: var(--main-nav-fg-colour, #ddd);
    display: block;
    flex: 1 0 min-content;
    list-style: none;
    text-align: center;

    & .nav-link {
        &:focus,
        &:active,
        &:hover {
            background-color: var(--main-nav-fg-colour, #ddd);
            color: var(--main-nav-bg-colour, #111);
        }
    }

    & .social-title-link {
        &:focus,
        &:active,
        &:hover {
            background-color: var(--social-hover-bg-colour, #2a2a2a);
        }
    }
}

.nav-link {
    line-height: 2;
    text-decoration: none;
}

.nav-link:focus,
.nav-link:active,
.nav-link:hover {
    text-decoration: underline;
}

.site-image {
    height: 100px;
    max-width: 300px;
    vertical-align: middle;
}

.main-navigation,
.main-navigation-mobile {
    & .dananke-social-list-item {
        & .dananke-social-link {
            align-items: center;
            display: flex;
            justify-content: center;
            margin-left: auto;
            margin-right: auto;
        }
    }
}

.nav-menu-list {
    align-items: center;
    align-content: center;
    display: flex;
    flex: 1 1 100%;
    flex-flow: row wrap;
    justify-content: space-between;
    margin-bottom: 0;
    padding-left: 0;
    text-align: center;
}

.title-menu-list {
    margin-bottom: 1rem;
}

.nav-link,
.nav-link:link {
    color: var(--main-nav-fg-colour, #ddd);
    display: block;
    margin-bottom: 8px; // Tap target separation
    margin-left: 4px;
    margin-top: 8px;
    margin-right: 4px;
    min-height: 48px;
    min-width: 40px;  // Minimum tap target size
    padding-left: 4px;
    padding-bottom: 0;
    padding-right: 4px;
    padding-top: 0;
}

.nav-menu-item {
    &:first-child a {
        margin-left: 0;
    }

    &:last-child a {
        margin-right: 0;
    }
}

.site-title-item {
    flex: 1 1 100%;
}

.footer-copyright-item {
    flex: 0 1 auto;
}

.article-intense-notice {
    margin-bottom: 1.67rem;

    & .intense-notice-title {
        margin-bottom: 1.5rem;
        max-width: 95%;
    }

    & .intense-notice-box {
        margin-bottom: 0;
        max-width: 80%;
    }

    & .intense-notice-item {
        padding-bottom: 1rem;
        padding-left: .75rem;
        padding-right: .75rem;

        &:first-child {
            padding-top: .75rem;
        }

        &:last-child {
            padding-bottom: .75rem;
        }
    }

    @include center-block;
}

@include clear-fix(article-intense-notice);

.intense-notice-title {
    background-color: var(--intense-notice-title-background-colour, #111);
    border-radius: 9999px;
    color: var(--intense-notice-title-colour, #ccc);
    display: block;
    font-family: var(--intense-notice-title-font-family);
    font-size: 1.875rem;
    overflow: clip;
    padding: 2rem;
    width: max-content;
    text-align: center;

    @include center-block;
}
/* ... */

